[package]
name = "pioneer"
version = "0.1.0"
authors = ["Thomas Elder <tgelder@gmail.com>"]

[dependencies]
image = "0.19.0"
piston = "0.39.0"
piston2d-graphics = "0.28.0"
pistoncore-glutin_window = "0.51.0"
piston2d-opengl_graphics = "0.57.0"
piston_window = "0.85.0"
piston2d-drag_controller = "0.24.0"
rand = "0.6"